# x64dbg-decomp2dbg

./: .clangd  .gitignore  CMakeLists.txt  Dockerfile  Justfile  README.md
.github/workflows/: build.yml
client/: CMakeLists.txt
client/include/: client.h
client/src/: client.cpp  demo_main.cpp
src/: graph.cpp  graph.h  modules.cpp  modules.h  plugin.cpp  plugin.h  pluginmain.h  types.cpp  types.h
x64dbg/pluginsdk/: x32bridge.lib  x32dbg.lib  x64bridge.lib  x64dbg.lib
